[gd_scene load_steps=23 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://sprites/Explosion 2 clone-1-white.png" type="Texture" id=2]
[ext_resource path="res://sprites/Explosion 2 clone-2-white.png" type="Texture" id=3]
[ext_resource path="res://sprites/Explosion 2 clone-3-white.png" type="Texture" id=4]
[ext_resource path="res://sprites/Explosion 2 clone-4-white.png" type="Texture" id=5]
[ext_resource path="res://sprites/Explosion 2 clone-5-white.png" type="Texture" id=6]
[ext_resource path="res://sprites/balloon bob right-1.png.png" type="Texture" id=7]
[ext_resource path="res://sprites/balloon bob right-2.png.png" type="Texture" id=8]
[ext_resource path="res://sprites/balloon bob left-1.png.png" type="Texture" id=9]
[ext_resource path="res://sprites/balloon bob left-2.png.png" type="Texture" id=10]
[ext_resource path="res://sprites/balloon bob front-1.png.png" type="Texture" id=11]
[ext_resource path="res://sprites/balloon bob front-2.png.png" type="Texture" id=12]
[ext_resource path="res://scripts/playerhit.gd" type="Script" id=13]
[ext_resource path="res://scripts/playerhitup.gd" type="Script" id=14]
[ext_resource path="res://scenes/GUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://scenes/hit_player_audio.tscn" type="PackedScene" id=16]
[ext_resource path="res://scenes/playerhit_audio.tscn" type="PackedScene" id=17]
[ext_resource path="res://scenes/playerjump_audio.tscn" type="PackedScene" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "death",
"speed": 4.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "right",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "left",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "blank_gameover"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
step = 0.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.827451, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ), Color( 0.827451, 0.0509804, 0.0509804, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="player" type="KinematicBody2D"]
position = Vector2( -1.58667, -37.2672 )
collision_mask = 7
script = ExtResource( 1 )

[node name="deathanimation" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "death"
frame = 3
playing = true

[node name="spriteplayer" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "idle"
playing = true

[node name="cameraplayer" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.3, 1.3 )

[node name="collisionplayer" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -20.1412, -29.0647, -25.9121, -23.063, -27.9896, -17.0613, -28.5606, -14.1356, -30.4518, -2.41856, -30.4581, 24.058, -11.129, 30.1974, 11.6062, 30.1999, 30.4054, 23.4927, 30.2702, -5.12323, 27.2661, -20.1438, 25.9844, -23.063, 20.5213, -29.0647 )

[node name="player_raycastleft" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -32, 0 )
collision_mask = 8

[node name="player_raycastright" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 32, 0 )
collision_mask = 8

[node name="playerhitdown" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource( 13 )

[node name="collisionhitplayerdown" type="CollisionPolygon2D" parent="playerhitdown"]
modulate = Color( 0.0392157, 0.741176, 0.0980392, 1 )
position = Vector2( 7.62939e-006, 22.0303 )
polygon = PoolVector2Array( -30.9949, -16.4769, -30.9013, 2.48322, -11.2296, 8.68448, 11.9262, 8.68448, 30.9085, 1.82351, 31.0969, -15.8005, 0.554688, -6.39241 )

[node name="playerhitup" type="Area2D" parent="."]
collision_mask = 8
script = ExtResource( 14 )

[node name="collisionhitplayerup" type="CollisionPolygon2D" parent="playerhitup"]
position = Vector2( -0.250343, -21.5296 )
polygon = PoolVector2Array( -20.448, -13.1352, 22.3623, -13.1352, 31.8542, -3.44961, 33.2411, 12.4912, -32.6384, 12.7618, -30.9084, -3.64333 )

[node name="GUI" parent="." instance=ExtResource( 15 )]

[node name="timer_record" type="Timer" parent="."]

[node name="hit_player" parent="." instance=ExtResource( 16 )]

[node name="playerhitgameover_audio" parent="." instance=ExtResource( 17 )]

[node name="playerjump_audio" parent="." instance=ExtResource( 18 )]

[node name="hit_modulate" type="AnimationPlayer" parent="."]
anims/blank_gameover = SubResource( 3 )
anims/hit_modulate = SubResource( 4 )

[connection signal="death_check" from="." to="." method="_on_player_death_check"]
[connection signal="body_entered" from="playerhitdown" to="playerhitdown" method="_on_playerhitdown_body_entered"]
[connection signal="death_down" from="playerhitdown" to="." method="_on_playerhitdown_death_down"]
[connection signal="body_entered" from="playerhitup" to="playerhitup" method="_on_playerhitup_body_entered"]
[connection signal="death_up" from="playerhitup" to="." method="_on_playerhitup_death_up"]
[connection signal="timeout" from="timer_record" to="." method="_on_timer_record_timeout"]
